Bump tomcat to 8.0.36